# cbc-24-hour-challenge

./: .gitignore  MVP_PRD.md  README.md  TODO.md  USAGE_EXAMPLE.md  pyproject.toml  requirements.txt  test_ignore.py
scripts/: create_state_from_existing.py
semanticize/: __init__.py  cli.py
semanticize.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
semanticize/commands/: __init__.py  check.py  fix.py  init.py  launch.py  list_files.py  setup.py  update.py
semanticize/core/: __init__.py  config.py  dependency.py  discovery.py  graph.py  llm.py  propagation.py  state.py  storage.py
semanticize/viewer/: server.py
semanticize/viewer/templates/: index.html
