[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticize"
version = "0.1.0"
description = "Semantic codebase understanding system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "pathspec>=0.11.0",
]

[project.scripts]
semanticize = "semanticize.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["semanticize*"]
